...
    context.read<NoteBloc>().add(FetchNotesEvent());
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: const Key('home'),
      floatingActionButton: const AddNoteButton(),
      body: SafeArea(
        child: Padding(
          padding: const EdgeInsets.only(top: 10),
          child: BlocListener<EditNoteCubit, EditNoteState>(
            listener: (context, state) {
...
                    ),
                    BlocBuilder<NoteBloc, NoteState>(
                      builder: (context, state) {
                        return switch (state.status) {
                          NotesStatus.initial => const SizedBox.shrink(),
                          NotesStatus.empty => const EmptyWidget(
                              key: Key('empty_widget'),
                              imagePath: AssetConsts.empty,
                              errorMessage: 'Create your first note !',
                            ),
                          NotesStatus.success => NoteListWidget(
                              notes: state.notes,
                            ),
...
