...
            final isEdited = state.status.isEdited;
            return Theme(
              data: ThemeData(dialogBackgroundColor: AppTheme.nero),
              child: Builder(
                builder: (context) {
                  return InkWell(
                    key: const Key('save_note_icon'),
                    borderRadius: BorderRadius.circular(15),
                    onTap: !isEdited
                        ? null
                        : () {
                            showDialog<void>(
                              context: context,
...
                                    ),
                                    Container(
                                      decoration: const BoxDecoration(),
                                      width: 112,
                                      height: 39,
                                      child: ElevatedButton(
                                        key: const Key('save_note_button'),
                                        style: ElevatedButton.styleFrom(
                                          backgroundColor: AppTheme.green,
                                        ),
                                        onPressed: () {
                                          context.go(
                                            RouteConsts.homeRoute,
...
